fix: hopefully fix scrolling issues on ios

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
 }
 
 html, body {
